增加版本号集中管理机制

--- a/.babelrc
+++ b/.babelrc
@@ -3,12 +3,13 @@
 		[
 			"env",
 			{
-				"target": {
+				"targets": {
 					"node": "current"
 				},
 				"useBuiltIns": true
 			}
-		]
+		],
+		"stage-2"
 	],
 	"plugins": []
 }
