--- a/package.json
+++ b/package.json
@@ -10,24 +10,26 @@
 		"clean": "gulp clean",
 		"prod": "gulp",
 		"dev": "gulp debug",
-		"lint": "gulp eslint"
+		"lint": "gulp eslint",
+		"depend": "gulp depend"
 	},
 	"author": "yangxu",
 	"license": "ISC",
 	"devDependencies": {
 		"babel-cli": "^6.24.1",
-		"babel-eslint": "^7.2.3",
+		"babel-eslint": "^8.2.1",
 		"babel-node-debug": "^2.0.0",
 		"babel-polyfill": "^6.23.0",
-		"babel-preset-env": "^1.5.2",
-		"chai": "^3.5.0",
-		"del": "^2.2.2",
-		"eslint": "^3.19.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-stage-2": "^6.24.1",
+		"chai": "^4.1.2",
+		"del": "^3.0.0",
+		"eslint": "^4.16.0",
 		"gulp": "^3.9.1",
-		"gulp-babel": "^6.1.2",
-		"gulp-eslint": "^3.0.1",
-		"gulp-sourcemaps": "^2.6.0",
-		"mocha": "^3.3.0"
+		"gulp-babel": "^7.0.0",
+		"gulp-eslint": "^4.0.2",
+		"gulp-sourcemaps": "^2.6.1",
+		"mocha": "^5.0.0"
 	},
 	"dependencies": {
 		"babel-polyfill": "^6.23.0",
